<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MobileSafe</string>
    <string name="edit_password">input password</string>
    <string name="edit_password_confirm">input again</string>
    <string name="add_password">add password</string>
    <string name="ok" tools:ignore="ButtonCase">ok</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>


    <string name="app_locker">AppLock</string>
    <string name="app_info_loading">AppInfo Loading……</string>

</resources>
